updating channel register uri's crafting in migration code (#1970)